# voice-chat

./: .gitignore  CMakeLists.txt  main.c
include/: math_extension.h  miniaudio.h  string_extension.h
include/client/: soundio_microphone.h
include/cross_sockets/: allocation_extension.h  cross_sockets.h  ip_address.h
include/logger/: logger.h
include/server/: properties.h
include/soundio/: soundio.h
src/: main.c  string_extension.c
src/client/: main.c  soundio_microphone.c
src/server/: main.c
